--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "illuminate/support": "^7.0.0|^8.0.0",
     "spatie/eloquent-sortable": "^3.9.0",
     "spatie/laravel-sluggable": "^2.6.0",
-    "spatie/laravel-translatable": "^4.5.0"
+    "spatie/laravel-translatable": "^4.5.0",
+    "watson/validating": "^6.0"
   },
   "require-dev": {
     "codedungeon/phpunit-result-printer": "^0.27.0",
